monitoring/kube-prometheus/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: monitoring
spec:
  hosts:
  - "prometheus.chemimotty.com"
  gateways:
  - istio-system/gateway
  http:
  - route:
    - destination:
        host: prometheus-k8s
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: monitoring
spec:
  hosts:
  - "grafana.chemimotty.com"
  gateways:
  - istio-system/gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
